Fix mobile header cutting into spacing

--- a/src/components/header/header-mobile.css
+++ b/src/components/header/header-mobile.css
@@ -4,6 +4,7 @@
 
 .header-mobile-burger-wrapper {
   padding-top: 32px;
+  padding-bottom: 32px;
   z-index: 10000;
   -webkit-user-select: none;
   user-select: none;
